# wwdc_spectra

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
results/figure_1/: README.md  tsne_embed.ipynb
results/figure_1/tsne_embeddings/: tsne_cond_1000.npy  tsne_cond_10000.npy  tsne_cond_2000.npy  tsne_cond_20000.npy  tsne_cond_51492.npy  tsne_cond_51492_spender_II.npy  tsne_orig_1000.npy  tsne_orig_10000.npy  tsne_orig_2000.npy  tsne_orig_20000.npy  tsne_orig_51492.npy  tsne_orig_51492_spender_II.npy  tsne_uncond_1000.npy  tsne_uncond_10000.npy  tsne_uncond_2000.npy
results/figure_2/: README.md  sdss_main_galaxy_sample_v2.ipynb
results/figure_3/: README.md  dcorr_mag_values_v2.py  dcorr_mag_values_v2.sh  z_correlation_mag_limited_v2.ipynb
results/figure_3/mag_floor/: 7655991_0_0.100.csv  7655991_0_0.100.npz  7655991_0_0.105.csv  7655991_0_0.105.npz  7655991_0_0.110.csv  7655991_0_0.110.npz  7655991_0_0.115.csv  7655991_0_0.115.npz  7655991_0_0.120.csv  7655991_0_0.120.npz  7655991_0_0.125.csv  7655991_0_0.125.npz  7655991_0_0.130.csv  7655991_0_0.130.npz  7655991_0_0.135.csv  7655991_0_0.135.npz  7655991_0_0.140.csv  7655991_0_0.140.npz  7655991_0_0.145.csv  7655991_0_0.145.npz  7655991_0_0.150.csv  7655991_0_0.150.npz  7655991_1_0.100.csv  7655991_1_0.100.npz  7655991_1_0.105.csv  7655991_1_0.105.npz  7655991_1_0.110.csv  7655991_1_0.110.npz  7655991_1_0.115.csv  7655991_1_0.115.npz  7655991_1_0.120.csv  7655991_1_0.120.npz  7655991_1_0.125.csv  7655991_1_0.125.npz  7655991_1_0.130.csv  7655991_1_0.130.npz  7655991_1_0.135.csv  7655991_1_0.135.npz  7655991_1_0.140.csv  7655991_1_0.140.npz  (+26 more)
results/table_1/: README.md  table_1.ipynb  z_linear_prediction.py  z_linear_prediction.sh  z_mlp_prediction_v2.py  z_mlp_prediction_v2.sh
results/table_1/linear_models_spender_II_v2/: cond_0.joblib  cond_1.joblib  cond_2.joblib  orig_1.joblib  uncond_0.joblib  uncond_1.joblib  uncond_2.joblib
results/table_1/linear_predictions_spender_II_v2/: cond_0.csv  cond_1.csv  cond_2.csv  orig_0.csv  orig_1.csv  orig_2.csv  uncond_0.csv  uncond_1.csv  uncond_2.csv
results/table_1/linear_predictions_spender_I_v2/: cond_0.csv  cond_1.csv  cond_2.csv  orig_0.csv  orig_1.csv  orig_2.csv  uncond_0.csv  uncond_1.csv  uncond_2.csv
results/table_1/linear_predictions_spender_I_v2/linear_models_spender_I_v2/: cond_0.joblib  cond_1.joblib  cond_2.joblib  orig_1.joblib  uncond_0.joblib  uncond_1.joblib  uncond_2.joblib
results/table_1/mlp_models_spender_II_v2/: cond_0.joblib  cond_1.joblib  cond_2.joblib  orig_0.joblib  uncond_0.joblib  uncond_1.joblib  uncond_2.joblib
results/table_1/mlp_models_spender_I_v2/: cond_0.joblib  cond_1.joblib  cond_2.joblib  orig_0.joblib  uncond_0.joblib  uncond_1.joblib  uncond_2.joblib
results/table_1/mlp_predictions_spender_II_v2/: cond_0.csv  cond_1.csv  cond_2.csv  orig_0.csv  orig_1.csv  orig_2.csv  uncond_0.csv  uncond_1.csv  uncond_2.csv
results/table_1/mlp_predictions_spender_I_v2/: cond_0.csv  cond_1.csv  cond_2.csv  orig_0.csv  orig_1.csv  orig_2.csv  uncond_0.csv  uncond_1.csv  uncond_2.csv
results/table_2/: README.md  model_bootstrap_results.csv  model_bootstrap_results_no_scaling.csv  parameter_regression.ipynb  r2_results_table.tex  split_r2_tables.tex
results/table_3/: README.md  dcorr_mag_values_counts.py  dcorr_mag_values_counts.sh  table_3.ipynb
results/table_3/output/: counts_model_7655991_0_z0.100.csv  counts_model_7655991_0_z0.105.csv  counts_model_7655991_0_z0.110.csv  counts_model_7655991_0_z0.115.csv  counts_model_7655991_0_z0.120.csv  counts_model_7655991_0_z0.125.csv  counts_model_7655991_0_z0.130.csv  counts_model_7655991_0_z0.135.csv  counts_model_7655991_0_z0.140.csv  counts_model_7655991_0_z0.145.csv  counts_model_7655991_0_z0.150.csv
src/conf/data/: galaxy10.yaml  rgbmnist.yaml  sdss.yaml  spender_II_embeddings.yaml  spender_embeddings.yaml  spender_embeddings_jhu.yaml
src/conf/experiment/aion_flow/: embed.yaml  meta.yaml  model.yaml  train.yaml
src/conf/hydra/: default.yaml
src/conf/logger/: checkpoint.yaml  csv.yaml  wandb.yaml
src/conf/optimizer/: default.yaml  early_stopping.yaml
src/conf/paths/: default.yaml
src/conf/trainer/: cpu.yaml  default.yaml  gpu.yaml  mps.yaml  multi_gpu.yaml  multi_node_gpu.yaml
src/project/: __init__.py
src/wwdc_spectra/data/: cross_match.py  embeddings.py  make_kcorrect.py  make_mag_limited_samples.py  make_mag_limited_samples.sh  make_mag_slice_samples.py  make_mag_slice_samples.sh  make_vol_limited_samples.py  make_vol_limited_samples.sh  modules.py  nyu_vac_match.py  sdss.py  upload_to_hf.py
src/wwdc_spectra/inference/: embed.py  modules.py  test.py  upload_to_hf.py
src/wwdc_spectra/models/: flow.py  load_aion_spectra.py  load_spender.py  model.py  modules.py  upload_to_hf.py
src/wwdc_spectra/training/: modules.py  train.py
(+35 files in other folders)
