[project]
name = "wwdc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Rogers" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.11.6",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cloudpickle==3.1.0",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "coverage==7.6.7",
    "cramjam==2.9.1",
    "cycler==0.12.1",
    "datasets>=4.0.0",
    "debugpy==1.8.9",
    "decorator==5.1.1",
    "distlib==0.3.9",
    "docker-pycreds==0.4.0",
    "executing==2.1.0",
    "fastparquet==2024.11.0",
    "filelock==3.16.1",
    "flow-matching>=1.0.10",
    "fonttools==4.55.0",
    "frozenlist==1.5.0",
    "fsspec==2024.10.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "huggingface-hub==0.26.2",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "identify==2.6.2",
    "idna==3.10",
    "iniconfig==2.0.0",
    "ipykernel==6.29.5",
    "ipython==8.29.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "lightning==2.4.0",
    "lightning-utilities==0.11.9",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nodeenv==1.9.1",
    "numpy==2.1.3",
    "omegaconf==2.3.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "pre-commit==4.0.1",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.0",
    "protobuf==5.28.3",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.18.0",
    "pyparsing==3.2.0",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pytorch-lightning==2.4.0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "scienceplots>=2.2.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sentry-sdk==2.18.0",
    "setproctitle==1.3.4",
    "setuptools==75.5.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "stack-data==0.6.3",
    "submitit==1.5.2",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "timm==1.0.11",
    "torch==2.5.1",
    "torchmetrics==1.6.0",
    "torchvision==0.20.1",
    "tornado==6.4.2",
    "tqdm==4.67.0",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "virtualenv==20.27.1",
    "wandb==0.18.7",
    "wcwidth==0.2.13",
    "xgboost==2.1.3",
    "yarl==1.17.2",
]

[project.scripts]
wwdc = "wwdc:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
