[project]
name = "wwdc-spectra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroml",
    "corner>=2.2.3",
    "datasets>=4.4.2",
    "dcor",
    "flow-matching>=1.0.10",
    "huggingface-hub>=1.3.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "ipykernel>=7.1.0",
    "kcorrect>=5.1.8",
    "lightning>=2.6.0",
    "natsort",
    "polymathic-aion>=0.0.2",
    "pysr>=1.5.10",
    "python-dotenv>=1.2.1",
    "pytorch-ignite",
    "scienceplots>=2.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spender>=0.2.9",
    "statsmodels>=0.14.6",
    "submitit>=1.5.4",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "wandb>=0.24.0",
    "zuko>=1.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
